k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: shopsimple
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: shopsimple
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: shopsimple
    app.kubernetes.io/component: api
